--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile:sass": "node-sass style/sass/main.scss style/css/main.css -w"
+    "compile:sass": "node-sass style/sass/main.scss style/css/main.css "
   },
   "author": "",
   "license": "ISC",
